--- a/json/project.yaml
+++ b/json/project.yaml
@@ -1,7 +1,10 @@
 name: "json"
 description: "nlohmann JSON for modern C++"
 version: "3.7.3"
-packages:
-  json:
-test_bits:
-  cest: '1.0'
+build:
+  packages:
+    json:
+  bits:
+test:
+  bits:
+    cest: '1.0'
