--- a/inih/project.yaml
+++ b/inih/project.yaml
@@ -1,7 +1,9 @@
 name: "inih"
 description: "inih (INI Not Invented Here)"
 version: "1.0"
-packages:
-  inih:
-test_bits:
-  cest: '1.0'
+build:
+  packages:
+    inih:
+test:
+  bits:
+    cest: '1.0'
