--- a/mongoose/project.yaml
+++ b/mongoose/project.yaml
@@ -2,6 +2,7 @@ name: mongoose
 description: Mongoose embedded web server
 license: gplv2
 version: "6.16"
-packages:
+build:
+  packages:
     mongoose:
 
